syntax = "proto3";

package cdn.cloud_api.proto.userapi;

import "google/api/annotations.proto";

import "cdn/cloud_api/proto/model/resource.proto";
import "cdn/cloud_api/proto/userapi/resource_params.proto";

option go_package = "a.yandex-team.ru/cdn/cloud_api/proto/userapi";

service ResourceRuleService {
    rpc CreateResourceRule(CreateResourceRuleRequest) returns (model.ResourceRule) {
        option (google.api.http) = {
            post: "/userapi/resources/{resource_id}/rules"
            body: "*"
        };
    }

    rpc GetResourceRule(GetResourceRuleRequest) returns (model.ResourceRule) {
        option (google.api.http) = {
            get: "/userapi/resources/{resource_id}/rules/{rule_id}"
        };
    }

    rpc ListResourceRules(ListResourceRulesRequest) returns (ListResourceRulesResponse) {
        option (google.api.http) = {
            get: "/userapi/resources/{resource_id}/rules"
        };
    }

    rpc UpdateResourceRule(UpdateResourceRuleRequest) returns (model.ResourceRule) {
        option (google.api.http) = {
            put: "/userapi/resources/{resource_id}/rules/{rule_id}"
            body: "*"
        };
    }

    rpc DeleteResourceRule(DeleteResourceRuleRequest) returns (DeleteResourceRuleResponse) {
        option (google.api.http) = {
            delete: "/userapi/resources/{resource_id}/rules/{rule_id}"
        };
    }
}
